# MoFox-Code-Desktop

./: .gitignore  .gitmodules  pyproject.toml
.github/workflows/: build-release.yml
desktop/: README.md  __init__.py  build.bat  config_generator.py  config_parser.py  launcher.py  mofox-backend.spec  pyinstaller_entry.py  setup_server.py
desktop/frontend/: package-lock.json
desktop/frontend/src/: App.tsx  index.css
desktop/frontend/src/components/: SettingsModal.tsx  SetupWizard.tsx
desktop/tauri/: Cargo.toml  package.json  tauri.conf.json
desktop/tauri/capabilities/: default.json
desktop/tauri/icons/: icon.icns
desktop/tauri/src/: lib.rs  main.rs
docs/: README.md
docs/guides/plugin-market/: README.md  cli.md  frontend.md  server-backend.md
docs/llm/: README.md  context.md  exceptions.md  monitor.md  request.md  rerank.md  response.md  roles.md  types.md
docs/llm/model_client/: README.md
docs/llm/payload/: README.md  content.md  payload.md  tooling.md
docs/llm/policy/: README.md
plugins/default_chatter/: runners.py  sub_agent_collaboration.py
plugins/napcat_adapter/: plugin.py
scripts/: config_manager.py
src/app/runtime/: bot.py  command_parser.py  plugin_market_sync.py  user_agreements.py
src/core/components/base/: agent.py
src/core/config/: core_config.py
src/kernel/llm/: token_counter.py
test/kernel/llm/: test_anthropic_client.py  test_context_manager.py
test/plugins/: test_default_chatter_runners.py  test_default_chatter_sub_agent_collaboration.py  test_napcat_adapter_startup_validation.py  test_voxcpm_tts_provider.py
(+3 files in other folders)
