[package]
name = "mofox-code-desktop"
version = "0.2.0"
description = "MoFox Code Desktop — AI Coding Agent 桌面应用"
authors = ["MoFox Code Team"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
